--- a/tests/Application/templates/bundles/SyliusAdminBundle/Common/_address.html.twig
+++ b/tests/Application/templates/bundles/SyliusAdminBundle/Common/_address.html.twig
@@ -5,6 +5,15 @@
     {% if address.company %}
         {{ address.company }}<br/>
     {% endif %}
+    {% if address.billingRecipientType == constant('Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\Model\\ItalianInvoiceableAddressInterface::BILLING_RECIPIENT_TYPE_COMPANY') and address.vatNumber is not null %}
+        {{ 'webgriffe_sylius_italian_invoiceable_order.ui.address.vat_number_short'|trans }}:
+        {{ address.vatNumber }}<br />
+    {% endif %}
+    <strong {{ sylius_test_html_attribute('full-name ', "%s %s"|format(address.firstName, address.lastName)) }}>{{ address.firstName }} {{ address.lastName }}</strong><br>
+    {% if address.billingRecipientType == constant('Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\Model\\ItalianInvoiceableAddressInterface::BILLING_RECIPIENT_TYPE_INDIVIDUAL') and address.taxCode is not null %}
+        {{ 'webgriffe_sylius_italian_invoiceable_order.ui.address.tax_code_short'|trans }}:
+        {{ address.taxCode }}<br />
+    {% endif %}
     {{ address.phoneNumber }}<br/>
     {{ address.street }}<br/>
     {{ address.city }}<br/>
