Improve invoiceable address info show template

--- a/src/Resources/views/Common/_invoiceableAddressInfo.html.twig
+++ b/src/Resources/views/Common/_invoiceableAddressInfo.html.twig
@@ -1,9 +1,19 @@
-{% if address.billingRecipientType == constant('Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\Model\\ItalianInvoiceableAddressInterface::BILLING_RECIPIENT_TYPE_COMPANY') and address.vatNumber is not null %}
-    {{ 'webgriffe_sylius_italian_invoiceable_order.ui.address.vat_number_short'|trans }}:
-    {{ address.vatNumber }}<br />
-{% endif %}
-<strong {{ sylius_test_html_attribute('full-name ', "%s %s"|format(address.firstName, address.lastName)) }}>{{ address.firstName }} {{ address.lastName }}</strong><br>
-{% if address.billingRecipientType == constant('Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\Model\\ItalianInvoiceableAddressInterface::BILLING_RECIPIENT_TYPE_INDIVIDUAL') and address.taxCode is not null %}
-    {{ 'webgriffe_sylius_italian_invoiceable_order.ui.address.tax_code_short'|trans }}:
-    {{ address.taxCode }}<br />
+{% if address.billingRecipientType == constant('Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\Model\\ItalianInvoiceableAddressInterface::BILLING_RECIPIENT_TYPE_COMPANY') %}
+    {% if address.company %}
+        <strong>{{ address.company }}</strong><br/>
+    {% endif %}
+    {% if address.vatNumber %}
+        {{ 'webgriffe_sylius_italian_invoiceable_order.ui.address.vat_number_short'|trans }}:
+        {{ address.vatNumber }}<br />
+    {% endif %}
+    <span {{ sylius_test_html_attribute('full-name ', "%s %s"|format(address.firstName, address.lastName)) }}>{{ address.firstName }} {{ address.lastName }}</span><br>
+{% else %}
+    <strong {{ sylius_test_html_attribute('full-name ', "%s %s"|format(address.firstName, address.lastName)) }}>{{ address.firstName }} {{ address.lastName }}</strong><br>
+    {% if address.taxCode %}
+        {{ 'webgriffe_sylius_italian_invoiceable_order.ui.address.tax_code_short'|trans }}:
+        {{ address.taxCode }}<br />
+    {% endif %}
+    {% if address.company %}
+        {{ address.company }}<br/>
+    {% endif %}
 {% endif %}
